tests/ui/parser/issues/issue-57684.stderr
error: expected `:`, found `=`
  --> $DIR/issue-57684.rs:27:20
   |
LL |     let _ = X { f1 = 5 };
   |                   -^
   |                   |
   |                   help: replace equals symbol with a colon: `:`

error: expected `:`, found `=`
  --> $DIR/issue-57684.rs:32:12
   |
LL |         f1 = 5,
   |           -^
   |           |
   |           help: replace equals symbol with a colon: `:`

error: aborting due to 2 previous errors

